--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+*::selection {
+  background-color: #ffc83d;
+  color: #0f0f10;
+}
+html {
+  scroll-behavior: smooth !important;
+  scroll-padding-top: 50px;
+}
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  position: relative;
+}
+.hidden {
+  display: none;
+}
+.before-scale::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: #45a29e;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 0.3s ease-in-out;
+}
+.before-scale:hover:before {
+  transform: scale(1);
+}
+button.before-btn::before {
+  transform: scale(1);
+  border-radius: 0;
+  width: 0;
+}
+button.before-btn:hover:before {
+  width: 100%;
+}
+.banner-bg-light {
+  background: url("./assets/banner-bg-light.jpg") no-repeat;
+  background-size: cover;
+}
+.banner-bg-dark {
+  background: url("./assets/banner-bg-dark.png") no-repeat;
+  background-size: cover;
+}
+.contact-bg-gradient {
+  background: rgb(255, 200, 61);
+  background: linear-gradient(
+    45deg,
+    rgba(255, 200, 61, 1) 0%,
+    rgba(69, 162, 158, 1) 47%,
+    rgba(255, 200, 61, 1) 100%
+  );
+}
+@layer base {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-bold;
+  }
+
+  h1 {
+    @apply text-4xl sm:text-5xl md:text-6xl;
+  }
+
+  h1 {
+    @apply text-3xl sm:text-4xl;
+  }
+
+  li {
+    @apply cursor-pointer;
+  }
+
+  html {
+    @apply scroll-smooth;
+  }
 }
